--- a/style.css
+++ b/style.css
@@ -22,4 +22,38 @@ header{
     display: inline;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 40px;
+    vertical-align: middle;
+}
+
+#tasti{
+   height: 50px;
+   width: 80%;
+   background-color: white;
+   border-radius: 5px;
+   margin: 50px auto; 
+   line-height: 50px;
+   vertical-align: middle;
+   padding-left: 5%;
+}
+
+#tasto-task{
+    height: 30px;
+    width: 90px;
+    background-color: rgb(75,171,241);
+    color: rgb(255,255,255);
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    border: 1px solid rgb(75,171,241);
+    border-radius: 5px;
+}
+
+#tasto-section{
+    height: 30px;
+    width: 100px;
+    background-color: rgb(255,255,255);
+    color: rgba(128,128,128,0.3);
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    border: 1px solid rgba(128,128,128,0.3);
+    border-radius: 5px;
 }
